style: Update footer logos to `LOGO NEGRO.png` and reformat product descriptions for readability.

--- a/contacto.html
+++ b/contacto.html
@@ -70,7 +70,7 @@
         <div class="footer-content">
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="IMG/LOGO FOOTER.png" alt="Hacherit Logo">
+                    <img src="IMG/LOGO NEGRO.png" alt="Hacherit Logo">
                 </div>
                 <div class="redes-sociales">
                     <a href="#" class="red-social"><img src="IMG/TIKTOK_1.png" alt=""></a>
