--- a/productos.html
+++ b/productos.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Hacherit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -22,11 +24,12 @@
 
     <section class="productos-section">
         <h2 class="section-title">NUESTROS PRODUCTOS</h2>
-        
+
         <div class="producto-card rojo">
             <div class="producto-info">
                 <h3>Honey Rojo</h3>
-                <p>Un café de matices intensos, donde el dulzor del vino y el aroma del cacao se entrelazan en perfecta armonía, reflejando la paciencia y la paciencia del proceso.</p>
+                <p>Un café de matices intensos, donde el dulzor del vino y el aroma del cacao se entrelazan en perfecta
+                    armonía, reflejando la paciencia y la paciencia del proceso.</p>
                 <a href="producto-detalle.html" class="cta-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
@@ -37,7 +40,8 @@
         <div class="producto-card negro">
             <div class="producto-info">
                 <h3>Honey Negro</h3>
-                <p>Oscuro y profundo, conserva una dulzura sutil que balancea la riqueza de sus sentidos. Cada taza evoca la fuerza entre lo salvaje y lo domado, entre la tierra y la mente.</p>
+                <p>Oscuro y profundo, conserva una dulzura sutil que balancea la riqueza de sus sentidos. Cada taza
+                    evoca la fuerza entre lo salvaje y lo domado, entre la tierra y la mente.</p>
                 <a href="#" class="cta-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
@@ -48,7 +52,8 @@
         <div class="producto-card verde">
             <div class="producto-info">
                 <h3>Suave Lavado</h3>
-                <p>Limpio, claro y sereno. Un café que habla de las montañas y de las manos que lo cultivan. Conserva la luz, el equilibrio y la pureza de la esencia.</p>
+                <p>Limpio, claro y sereno. Un café que habla de las montañas y de las manos que lo cultivan. Conserva la
+                    luz, el equilibrio y la pureza de la esencia.</p>
                 <a href="#" class="cta-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
@@ -62,7 +67,7 @@
         <div class="footer-content">
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="/placeholder.svg?height=80&width=160" alt="Hacherit Logo">
+                    <img src="IMG/LOGO NEGRO.png" alt="Hacherit Logo">
                 </div>
                 <div class="redes-sociales">
                     <a href="#" class="red-social"><img src="IMG/TIKTOK_1.png" alt=""></a>
@@ -82,4 +87,5 @@
         </div>
     </footer>
 </body>
+
 </html>
