feat: Implement active navigation link styling and hover effects, adjust product section and card background styles, and remove FACEBOOK.png.

--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
             <a href="productos.html">PRODUCTOS</a>
             <a href="nosotros.html">NOSOTROS</a>
             <a href="experiencias.html">EXPERIENCIAS</a>
-            <a href="contacto.html">CONTACTO</a>
+            <a href="contacto.html" class="active">CONTACTO</a>
         </nav>
     </header>
 
