--- a/experiencias.html
+++ b/experiencias.html
@@ -17,7 +17,7 @@
             <a href="index.html">INICIO</a>
             <a href="productos.html">PRODUCTOS</a>
             <a href="nosotros.html">NOSOTROS</a>
-            <a href="experiencias.html">EXPERIENCIAS</a>
+            <a href="experiencias.html" class="active">EXPERIENCIAS</a>
             <a href="contacto.html">CONTACTO</a>
         </nav>
     </header>
