--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="IMG/LOGO NAV.png" alt="">
         </div>
         <nav>
-            <a href="index.html">INICIO</a>
+            <a href="index.html" class="active">INICIO</a>
             <a href="productos.html">PRODUCTOS</a>
             <a href="nosotros.html">NOSOTROS</a>
             <a href="experiencias.html">EXPERIENCIAS</a>
