feat: Add new image assets, update contact page map embed, and remove an old log file.

--- a/contacto.html
+++ b/contacto.html
@@ -60,8 +60,8 @@
 
             <div class="mapa-container">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1234567890123!2d-75.5641234567890!3d6.234567890123456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwMTQnMDQuNCJOIDc1wrAzMyc1MC44Ilc!5e0!3m2!1ses!2sco!4v1234567890123!5m2!1ses!2sco"
-                    allowfullscreen="" loading="lazy"></iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.175110902888!2d-75.52945899189426!3d6.240637884406592!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4427d7d3866cc3%3A0x4b5a7a5d63c3d3f3!2sHogar%20Casa%20CLARET!5e0!3m2!1ses!2sco!4v1764202822702!5m2!1ses!2sco"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
