feat: Add a background image to the contact page's hero section.

--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section class="hero centered">
+    <section class="hero centered contacto-hero">
         <div class="hero-content">
             <h1>CONTÁCTANOS</h1>
             <div class="decorative-wave"></div>
