feat: Update page content with specific images and refactor 'Nosotros' page layout with overlapping sections.

--- a/experiencias.html
+++ b/experiencias.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section class="hero centered">
+    <section class="hero centered experiencias-hero">
         <div class="hero-content">
             <h1>EXPERIENCIAS</h1>
             <div> <img src="IMG/linea.svg" alt=""></div>
@@ -32,7 +32,7 @@
     <section class="experiencias-section">
         <div class="experiencia-card">
             <div class="experiencia-imagen">
-                <img src="/placeholder.svg?height=500&width=600" alt="Recorrido Finca">
+                <img src="IMG/recorridos finca.png" alt="Recorrido Finca">
             </div>
             <div class="experiencia-texto">
                 <h3>RECORRIDO FINCA</h3>
@@ -45,7 +45,7 @@
 
         <div class="experiencia-card reverse">
             <div class="experiencia-imagen">
-                <img src="/placeholder.svg?height=500&width=600" alt="Catas de Café">
+                <img src="IMG/cata de cafe.png" alt="Catas de Café">
             </div>
             <div class="experiencia-texto">
                 <h3>CATAS DE CAFÉ</h3>
@@ -58,7 +58,7 @@
 
         <div class="experiencia-card">
             <div class="experiencia-imagen">
-                <img src="/placeholder.svg?height=500&width=600" alt="Mercados Campesinos">
+                <img src="IMG/mercados campesinos.png" alt="Mercados Campesinos">
             </div>
             <div class="experiencia-texto">
                 <h3>MERCADOS CAMPESINOS</h3>
