--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section class="hero centered">
+    <section class="hero centered nosotros-hero">
         <div class="hero-content">
             <h1>SOBRE NOSOTROS</h1>
             <div class="decorative-wave"></div>
@@ -41,11 +41,17 @@
                 la oportunidad de dejar nuestra huella en la tradición cafetera que nos vio crecer.</p>
         </div>
 
+        <!-- Imágenes centrales de Don Hernán y Don Norbey -->
+        <div class="nosotros-imagenes-centrales">
+            <img src="IMG/don hernan_.png" alt="Don Hernán">
+            <img src="IMG/don norbey.png" alt="Don Norbey">
+        </div>
+
         <div class="nosotros-content">
-            <div class="content-block">
-                <div class="image-container">
-                    <img src="/placeholder.svg?height=400&width=400" alt="Hermanos Guzmán">
-                    <img src="/placeholder.svg?height=400&width=400" alt="Productor Hacherit">
+            <!-- Primer content block: imagen izquierda, texto derecha -->
+            <div class="content-block block-overlap-left">
+                <div class="image-container single">
+                    <img src="IMG/sobre nosotros 1.png" alt="Trabajando en la finca">
                 </div>
                 <div class="text-container">
                     <p>Después de muchos años trabajando para otros cultivadores, decidimos crear nuestra propia marca,
@@ -57,16 +63,17 @@
                 </div>
             </div>
 
-            <div class="content-block reverse">
-                <div class="image-container single">
-                    <img src="/placeholder.svg?height=400&width=800" alt="Finca Hacherit">
-                </div>
+            <!-- Segundo content block: texto izquierda, imagen derecha -->
+            <div class="content-block block-overlap-right">
                 <div class="text-container">
                     <p>Hoy nuestra finca ubicada en Santa Elena, Medellín, es el corazón de todo lo que hacemos. Aquí
                         cultivamos, fermentamos y tostamos nuestro café con la dedicación que aprendimos desde pequeños.
                     </p>
                     <p>Cada taza de Hacherit lleva un poco de nuestra historia, del trabajo de hermanos y del amor por
                         el café que nos une desde siempre.</p>
+                </div>
+                <div class="image-container single">
+                    <img src="IMG/sobre nosotros 2.png" alt="Finca Hacherit">
                 </div>
             </div>
         </div>
