--- a/productos.html
+++ b/productos.html
@@ -33,7 +33,7 @@
                 <a href="producto-detalle.html" class="cta-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
-                <img src="/placeholder.svg?height=500&width=400" alt="Honey Rojo">
+                <img src="IMG/honey rojo.png" alt="Honey Rojo">
             </div>
         </div>
 
@@ -45,7 +45,7 @@
                 <a href="#" class="cta-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
-                <img src="/placeholder.svg?height=500&width=400" alt="Honey Negro">
+                <img src="IMG/honey negro.png" alt="Honey Negro">
             </div>
         </div>
 
@@ -57,7 +57,7 @@
                 <a href="#" class="cta-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
-                <img src="/placeholder.svg?height=500&width=400" alt="Honey Verde">
+                <img src="IMG/honey verde.png" alt="Honey Verde">
             </div>
         </div>
     </section>
