--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero index-hero">
         <div class="hero-content">
             <h1>CAFÉ DE ORIGEN</h1>
             <div> <img src="IMG/linea.svg" alt=""></div>
@@ -40,7 +40,7 @@
         <h2 class="section-title">RECONOCIMIENTOS</h2>
         <div class="reconocimiento-content">
             <div class="reconocimiento-imagenes">
-                <img src="/placeholder.svg?height=400&width=400">
+                <img src="IMG/reconocimiento.png">
             </div>
             <div class="reconocimiento-texto">
                 <p>En 2024, Hacherit fue reconocido en el evento “Medellín Sabe a Café”, obteniendo el tercer lugar en
