--- a/experiencias.html
+++ b/experiencias.html
@@ -34,12 +34,14 @@
             <div class="experiencia-imagen">
                 <img src="IMG/recorridos finca.png" alt="Recorrido Finca">
             </div>
-            <div class="experiencia-texto">
+            <div class="experiencia-info">
                 <h3>RECORRIDO FINCA</h3>
-                <p>En nuestra finca en Santa Elena, abrimos las puertas para que vivas el proceso desde el origen:
-                    siembra, recolección, fermentado y tostado del café. Una experiencia que te invita a conocer de
-                    cerca la montaña, a oler el grano fresco y a comprender historias con quienes cuidan la tierra. Es
-                    caminar por el cultivo, descubrir de dónde viene cada taza.</p>
+                <div class="experiencia-texto">
+                    <p>En nuestra finca en Santa Elena, abrimos las puertas para que vivas el proceso desde el origen:
+                        siembra, recolección, fermentado y tostado del café. Una experiencia que te invita a conocer de
+                        cerca la montaña, a oler el grano fresco y a comprender historias con quienes cuidan la tierra. Es
+                        caminar por el cultivo, descubrir de dónde viene cada taza.</p>
+                </div>
             </div>
         </div>
 
@@ -47,12 +49,14 @@
             <div class="experiencia-imagen">
                 <img src="IMG/cata de cafe.png" alt="Catas de Café">
             </div>
-            <div class="experiencia-texto">
+            <div class="experiencia-info">
                 <h3>CATAS DE CAFÉ</h3>
-                <p>En nuestras catas guiadas te enseñamos a reconocer los aromas, las notas y los sabores que hacen
-                    único nuestros procesos. Honey Negro, Honey Rojo—cada perfil cuenta una historia. Es una experiencia
-                    sensorial donde aprendes a vender y sentir cada café conecta a tus papilas a través del gusto y la
-                    memoria.</p>
+                <div class="experiencia-texto">
+                    <p>En nuestras catas guiadas te enseñamos a reconocer los aromas, las notas y los sabores que hacen
+                        único nuestros procesos. Honey Negro, Honey Rojo—cada perfil cuenta una historia. Es una experiencia
+                        sensorial donde aprendes a vender y sentir cada café conecta a tus papilas a través del gusto y la
+                        memoria.</p>
+                </div>
             </div>
         </div>
 
@@ -60,12 +64,14 @@
             <div class="experiencia-imagen">
                 <img src="IMG/mercados campesinos.png" alt="Mercados Campesinos">
             </div>
-            <div class="experiencia-texto">
+            <div class="experiencia-info">
                 <h3>MERCADOS CAMPESINOS</h3>
-                <p>Cada mes llevamos nuestro café a los mercados campesinos de Medellín y sus alrededores. Allí nos
-                    compartimos con quienes valoran el trabajo local, las historias familiares y los productos que nacen
-                    con dedicación. Es nuestro espacio para conectar, conversar, tostearlo comunidad y mantener viva la
-                    tradición cafetera que nos identifica.</p>
+                <div class="experiencia-texto">
+                    <p>Cada mes llevamos nuestro café a los mercados campesinos de Medellín y sus alrededores. Allí nos
+                        compartimos con quienes valoran el trabajo local, las historias familiares y los productos que nacen
+                        con dedicación. Es nuestro espacio para conectar, conversar, tostearlo comunidad y mantener viva la
+                        tradición cafetera que nos identifica.</p>
+                </div>
             </div>
         </div>
     </section>
