feat: Make logo clickable, update product detail images and layout, and refine various button and hero section styles.

--- a/producto-detalle.html
+++ b/producto-detalle.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="IMG/LOGO NAV.png" alt="">
+            <a href="index.html"><img src="IMG/LOGO NAV.png" alt=""></a>
         </div>
         <nav>
             <a href="index.html">INICIO</a>
@@ -31,25 +31,31 @@
         <div class="detalle-specs">
             <div class="spec-item">
                 <div class="spec-icon"><img src="IMG/ALTURA.png" alt=""></div>
-                <strong>Altura:</strong>
-                <p>2040msnm</p>
+                <div class="spec-text">
+                    <strong>Altura:</strong>
+                    <p>2040msnm</p>
+                </div>
             </div>
             <div class="spec-item">
                 <div class="spec-icon"><img src="IMG/VARIEDADES.png" alt=""></div>
-                <strong>Variedades:</strong>
-                <p>Pajarito, Castillo Colombia</p>
+                <div class="spec-text">
+                    <strong>Variedades:</strong>
+                    <p>Pajarito, Castillo<br>Colombia</p>
+                </div>
             </div>
             <div class="spec-item">
                 <div class="spec-icon"><img src="IMG/TOSTION.png" alt=""></div>
-                <strong>Tostión:</strong>
-                <p>Media</p>
+                <div class="spec-text">
+                    <strong>Tostión:</strong>
+                    <p>Media</p>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="descripcion-section">
         <div class="producto-imagen-grande">
-            <img src="/placeholder.svg?height=600&width=400" alt="Honey Rojo">
+            <img src="IMG/honey rojo.png" alt="Honey Rojo">
         </div>
         <div class="descripcion-content">
             <h2>DESCRIPCIÓN</h2>
@@ -68,27 +74,30 @@
         </div>
     </section>
 
+    <div class="cta-container">
+        <a href="#" class="detail-cta-button">Compra aquí</a>
+    </div>
+
     <section class="proceso-section">
         <h2 class="section-title">Proceso</h2>
         <div class="proceso-grid">
             <div class="proceso-item">
-                <img src="/placeholder.svg?height=400&width=400" alt="Recolección">
+                <img src="IMG/proceso cafe 1.png" alt="Recolección">
                 <p>Solo se eligen los granos maduros, de color rojo intenso. Este punto es clave, pues la dulzura
                     natural del café depende de la madurez exacta del fruto.</p>
             </div>
             <div class="proceso-item">
-                <img src="/placeholder.svg?height=400&width=400" alt="Proceso Lavado">
+                <img src="IMG/proceso cafe 2.png" alt="Proceso Lavado">
                 <p>A diferencia del proceso lavado, los granos no se despulpan completamente. Parte del mucílago —la
                     "miel" natural del café— se mantiene adherida al grano durante el secado, aportando notas dulces y
                     una textura aterciopelada.</p>
             </div>
             <div class="proceso-item">
-                <img src="/placeholder.svg?height=400&width=400" alt="Reposo">
+                <img src="IMG/proceso cafe 3.png" alt="Reposo">
                 <p>Luego de alcanzar la humedad ideal, el café se deja reposar para estabilizar sus aromas antes de un
                     tueste medio que resalta sus matices vinosos y su cuerpo sedoso.</p>
             </div>
         </div>
-        <a href="#" class="cta-button cta-button-centered">Compra aquí</a>
     </section>
 
     <footer>
