--- a/experiencias.html
+++ b/experiencias.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="IMG/LOGO NAV.png" alt="">
+            <a href="index.html"><img src="IMG/LOGO NAV.png" alt=""></a>
         </div>
         <nav>
             <a href="index.html">INICIO</a>
