--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="IMG/LOGO NAV.png" alt="">
+            <a href="index.html"><img src="IMG/LOGO NAV.png" alt=""></a>
         </div>
         <nav>
             <a href="index.html" class="active">INICIO</a>
