feat: introduce dedicated product detail pages for honey variants with corresponding styling and assets.

--- a/honey-verde-detalle.html
+++ b/honey-verde-detalle.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Honey Rojo - Hacherit</title>
+    <title>Honey Verde - Hacherit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -22,11 +22,11 @@
         </nav>
     </header>
 
-    <section class="detalle-hero">
+    <section class="detalle-hero detalle-hero-verde">
         <div class="detalle-info">
-            <h1>Honey Rojo</h1>
-            <h1>Honey Rojo</h1>
-            <h1>Honey Rojo</h1>
+            <h1>Honey Verde</h1>
+            <h1>Honey Verde</h1>
+            <h1>Honey Verde</h1>
         </div>
         <div class="detalle-specs">
             <div class="spec-item">
@@ -55,11 +55,11 @@
 
     <section class="descripcion-section">
         <div class="producto-imagen-grande">
-            <img src="IMG/honey rojo.png" alt="Honey Rojo">
+            <img src="IMG/honey verde.png" alt="Honey Verde">
         </div>
         <div class="descripcion-content">
             <h2>DESCRIPCIÓN</h2>
-            <p>Nacido entre la neblina y los cafetales de Santa Elena, el Honey Rojo guarda la dulzura de la tierra en
+            <p>Nacido entre la neblina y los cafetales de Santa Elena, el Honey Verde guarda la dulzura de la tierra en
                 cada grano. Su proceso artesanal conserva la miel natural del café—esa capa dorada que envuelve el
                 grano—logrando tardes lentas, conversación y calidez.</p>
             <p>Un café para quienes buscan una experiencia más sensorial que rutinaria; un viaje suave y profundo al
