--- a/productos.html
+++ b/productos.html
@@ -30,7 +30,7 @@
                 <h3>Honey Rojo</h3>
                 <p>Un café de matices intensos, donde el dulzor del vino y el aroma del cacao se entrelazan en perfecta
                     armonía, reflejando la paciencia y la paciencia del proceso.</p>
-                <a href="producto-detalle.html" class="product-card-button">Conoce más</a>
+                <a href="honey-rojo-detalle.html" class="product-card-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
                 <img src="IMG/honey rojo.png" alt="Honey Rojo">
@@ -42,7 +42,7 @@
                 <h3>Honey Negro</h3>
                 <p>Oscuro y profundo, conserva una dulzura sutil que balancea la riqueza de sus sentidos. Cada taza
                     evoca la fuerza entre lo salvaje y lo domado, entre la tierra y la mente.</p>
-                <a href="#" class="product-card-button">Conoce más</a>
+                <a href="honey-negro-detalle.html" class="product-card-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
                 <img src="IMG/honey negro.png" alt="Honey Negro">
@@ -54,7 +54,7 @@
                 <h3>Suave Lavado</h3>
                 <p>Limpio, claro y sereno. Un café que habla de las montañas y de las manos que lo cultivan. Conserva la
                     luz, el equilibrio y la pureza de la esencia.</p>
-                <a href="#" class="product-card-button">Conoce más</a>
+                <a href="honey-verde-detalle.html" class="product-card-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
                 <img src="IMG/honey verde.png" alt="Honey Verde">
