--- a/honey-rojo-detalle.html
+++ b/honey-rojo-detalle.html
@@ -13,6 +13,12 @@
         <div class="logo">
             <a href="index.html"><img src="IMG/LOGO NAV.png" alt=""></a>
         </div>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <nav>
             <a href="index.html">INICIO</a>
             <a href="productos.html" class="active">PRODUCTOS</a>
