--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <div class="logo">
             <a href="index.html"><img src="IMG/LOGO NAV.png" alt=""></a>
         </div>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <nav>
             <a href="index.html" class="active">INICIO</a>
             <a href="productos.html">PRODUCTOS</a>
