--- a/contacto.html
+++ b/contacto.html
@@ -39,9 +39,8 @@
         <div class="contacto-content">
             <h2>Escríbenos</h2>
             <p class="contacto-intro">
-                Nos encanta escuchar a quienes disfrutan el café tanto como nosotros.
-                Si tienes dudas, comentarios o simplemente quieres contarnos tu experiencia con Hacherit, escríbenos.
-            </p>
+                Nos encanta escuchar a quienes disfrutan el café tanto como nosotros.Si tienes dudas, comentarios o
+                simplemente quieres contarnos tu experiencia con Hacherit, escríbenos.</p>
             <p class="contacto-intro">
                 Tu opinión nos ayuda a seguir creciendo y mejorando cada día.
             </p>
