--- a/experiencias.html
+++ b/experiencias.html
@@ -43,10 +43,10 @@
             <div class="experiencia-info">
                 <h3>RECORRIDO FINCA</h3>
                 <div class="experiencia-texto">
-                    <p>En nuestra finca en Santa Elena, abrimos las puertas para que vivas el proceso desde el origen:
-                        siembra, recolección, fermentado y tostado del café. Una experiencia que te invita a conocer de
-                        cerca la montaña, a oler el grano fresco y a comprender historias con quienes cuidan la tierra. Es
-                        caminar por el cultivo, descubrir de dónde viene cada taza.</p>
+                    <p>En nuestra finca, en Santa Elena, abrimos las puertas para que vivas el proceso desde el origen:
+                        sembrar, recolectar, fermentar y tostar el café que más tarde llega a tu taza. Cada recorrido es
+                        una invitación a conocer de cerca la montaña, a oler el grano fresco y a compartir historias con
+                        quienes lo cultivamos día a día.</p>
                 </div>
             </div>
         </div>
@@ -59,9 +59,9 @@
                 <h3>CATAS DE CAFÉ</h3>
                 <div class="experiencia-texto">
                     <p>En nuestras catas guiadas te enseñamos a reconocer los aromas, las notas y los sabores que hacen
-                        único nuestros procesos. Honey Negro, Honey Rojo—cada perfil cuenta una historia. Es una experiencia
-                        sensorial donde aprendes a vender y sentir cada café conecta a tus papilas a través del gusto y la
-                        memoria.</p>
+                        únicos nuestros procesos: Honey Rojo, Honey Negro y Suave Lavado. Más que una degustación, es un
+                        espacio para conversar, aprender y sentir cómo el café conecta a las personas a través del gusto
+                        y la memoria.</p>
                 </div>
             </div>
         </div>
@@ -73,10 +73,10 @@
             <div class="experiencia-info">
                 <h3>MERCADOS CAMPESINOS</h3>
                 <div class="experiencia-texto">
-                    <p>Cada mes llevamos nuestro café a los mercados campesinos de Medellín y sus alrededores. Allí nos
-                        compartimos con quienes valoran el trabajo local, las historias familiares y los productos que nacen
-                        con dedicación. Es nuestro espacio para conectar, conversar, tostearlo comunidad y mantener viva la
-                        tradición cafetera que nos identifica.</p>
+                    <p>Cada mes llevamos nuestro café a los mercados campesinos de Medellín y sus alrededores. Allí
+                        compartimos con quienes valoran el trabajo local, las historias familiares y los productos que
+                        nacen del campo. Para nosotros, estos encuentros no son solo ventas, son momentos para seguir
+                        tejiendo comunidad y mantener viva la tradición cafetera que nos identifica.</p>
                 </div>
             </div>
         </div>
@@ -85,11 +85,8 @@
     <section class="reservas-section">
         <h2>Reservas</h2>
         <div class="reservas-intro">
-            <p>Te invitamos a conocer el café desde su origen, a recorrer nuestra finca ubicada en Santa Elena,
-                Medellín. Allá podrás recorrer los cafetales, aprender sobre nuestros procesos artesanales y disfrutar
-                una cata guiada de nuestros cafés especiales.</p>
-            <p>También puedes unirte a nuestras catas en Medellín o visitarnos en los mercados campesinos para conocer
-                nuestras fermentaciones y degustar el resultado final en una taza.</p>
+            <p>Te invitamos a conocer el café desde su origen, en nuestra finca ubicada en Santa Elena, Medellín. Aquí podrás recorrer los cafetales, aprender sobre nuestros procesos artesanales y disfrutar una cata guiada de nuestros cafés especiales.</p>
+            <p>También podrás agendar tu visita para vivir la experiencia completa: caminar entre los cultivos, conocer nuestras fermentaciones y degustar el resultado final en una taza.</p>
         </div>
         <form class="form-reservas">
             <div class="form-row">
