--- a/honey-negro-detalle.html
+++ b/honey-negro-detalle.html
@@ -65,18 +65,18 @@
         </div>
         <div class="descripcion-content">
             <h2>DESCRIPCIÓN</h2>
-            <p>Nacido entre la neblina y los cafetales de Santa Elena, el Honey Negro guarda la dulzura de la tierra en
-                cada grano. Su proceso artesanal conserva la miel natural del café—esa capa dorada que envuelve el
-                grano—logrando tardes lentas, conversación y calidez.</p>
-            <p>Un café para quienes buscan una experiencia más sensorial que rutinaria; un viaje suave y profundo al
-                corazón del origen.</p>
+            <p>nspirado en la fuerza de lo simple, el Honey Negro representa el equilibrio entre lo clásico y lo
+                natural. Cultivado a la sombra y tostado con paciencia, revela una energía cálida que acompaña los días
+                con aroma a hogar.</p>
+
+            <p>Es un café que no busca sorprender, sino quedarse: fiel, honesto y lleno de carácter colombiano.</p>
 
             <h4>NOTAS DE SABOR:</h4>
-            <p>Vinoso, uva madura, chocolate.</p>
+            <p>Caramelo, miel y acidez cítrica frutal.</p>
 
             <h4>MARIDAJE SUGERIDO:</h4>
-            <p>Ideal con postres suaves como tiramisú, cheesecake o pan de banana. También resalta con quesos maduros y
-                chocolate semiamargo.</p>
+            <p>Perfecto con galletas de avena, torta de chocolate o frutos secos tostados. Ideal para acompañar el
+                desayuno o una tarde tranquila.</p>
         </div>
     </section>
 
@@ -94,14 +94,14 @@
             </div>
             <div class="proceso-item">
                 <img src="IMG/proceso cafe 2.png" alt="Proceso Lavado">
-                <p>A diferencia del proceso lavado, los granos no se despulpan completamente. Parte del mucílago —la
-                    "miel" natural del café— se mantiene adherida al grano durante el secado, aportando notas dulces y
-                    una textura aterciopelada.</p>
+                <p>Se retira la cáscara, pero, a diferencia del Honey Rojo, se conserva casi el 100% del mucílago para
+                    que fermente y oscurezca de manera natural.
+                </p>
             </div>
             <div class="proceso-item">
                 <img src="IMG/proceso cafe 3.png" alt="Reposo">
-                <p>Luego de alcanzar la humedad ideal, el café se deja reposar para estabilizar sus aromas antes de un
-                    tueste medio que resalta sus matices vinosos y su cuerpo sedoso.</p>
+                <p>Se seca manteniendo toda la miel, permitiendo un desarrollo profundo del dulzor, cuerpo denso y notas
+                    intensas.</p>
             </div>
         </div>
     </section>
