--- a/honey-rojo-detalle.html
+++ b/honey-rojo-detalle.html
@@ -66,8 +66,9 @@
         <div class="descripcion-content">
             <h2>DESCRIPCIÓN</h2>
             <p>Nacido entre la neblina y los cafetales de Santa Elena, el Honey Rojo guarda la dulzura de la tierra en
-                cada grano. Su proceso artesanal conserva la miel natural del café—esa capa dorada que envuelve el
-                grano—logrando tardes lentas, conversación y calidez.</p>
+                cada grano. Su proceso artesanal conserva la miel natural del fruto, creando un perfil envolvente que
+                recuerda a tardes lentas, conversación y calidez.
+            </p>
             <p>Un café para quienes buscan una experiencia más sensorial que rutinaria; un viaje suave y profundo al
                 corazón del origen.</p>
 
@@ -75,7 +76,7 @@
             <p>Vinoso, uva madura, chocolate.</p>
 
             <h4>MARIDAJE SUGERIDO:</h4>
-            <p>Ideal con postres suaves como tiramisú, cheesecake o pan de banana. También resalta con quesos maduros y
+            <p>Ideal con postres suaves como tiramisú, cheesecake o pan de banano. También resalta con quesos maduros y
                 chocolate semiamargo.</p>
         </div>
     </section>
@@ -94,14 +95,12 @@
             </div>
             <div class="proceso-item">
                 <img src="IMG/proceso cafe 2.png" alt="Proceso Lavado">
-                <p>A diferencia del proceso lavado, los granos no se despulpan completamente. Parte del mucílago —la
-                    "miel" natural del café— se mantiene adherida al grano durante el secado, aportando notas dulces y
-                    una textura aterciopelada.</p>
+                <p>Se deja una buena cantidad de miel que se oxida y toma tonos rojizos durante la fermentación.</p>
             </div>
             <div class="proceso-item">
                 <img src="IMG/proceso cafe 3.png" alt="Reposo">
-                <p>Luego de alcanzar la humedad ideal, el café se deja reposar para estabilizar sus aromas antes de un
-                    tueste medio que resalta sus matices vinosos y su cuerpo sedoso.</p>
+                <p>El grano se seca conservando parte del mucílago, lo que aporta un perfil dulce, jugoso y con mayor
+                    carácter frutal vinoso.</p>
             </div>
         </div>
     </section>
