--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hacherit - Café de Origen</title>
+    <link rel="icon" href="IMG/FAVICON.svg">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,7 +92,6 @@
         </div>
     </section>
 
-    <!-- Fixed footer structure to match wireframe: logo and social media on left, links on right -->
     <footer>
         <div class="footer-content">
             <div class="footer-left">
