--- a/nosotros.html
+++ b/nosotros.html
@@ -37,42 +37,40 @@
 
     <section class="nosotros-section">
         <div class="nosotros-intro">
-            <p>Somos Hermón y Norbey Guzmán Bran, dos hermanos nacidos en Santa Fe de Antioquia, una tierra donde el
-                café no solo se cultiva, sino que se respira desde la infancia.</p>
-            <p>Crecimos viendo a nuestros padres trabajar la tierra con paciencia y respeto, aprendiendo de ellos que el
-                café no se apura: se cuida, se escucha, y en cada cosecha nos enamoramos con el sonido de las miles, el
-                olor del grano maduro, el sabor que, cuando trabajas con amor, vale la pena.</p>
-            <p>Con el tiempo el café se convirtió en más que un oficio: fue nuestra escuela, nuestra historia familiar y
-                el vínculo que siempre nos mantuvo unidos. En cada cosecha descubrimos algo nuevo, y en cada grano vimos
-                la oportunidad de dejar nuestra huella en la tradición cafetera que nos vio crecer.</p>
+            <p>Somos Hernán y Norbey Guzmán Bran, dos hermanos nacidos en Santa Fe de Antioquia, una tierra donde el
+                café no solo se cultiva, sino que se respira desde la infancia. Crecimos viendo a nuestros padres
+                trabajar la tierra con paciencia y respeto, aprendiendo que cada semilla necesita tiempo, cuidado y amor
+                para dar su mejor fruto. Desde niños nos levantábamos con el sonido de las mulas, el olor del grano
+                recién tostado y el orgullo de saber que, aunque el trabajo era duro, valía la pena.</p>
+
+            <p>Con el tiempo, el café se convirtió en más que un oficio: fue nuestra escuela, nuestra historia familiar
+                y el vínculo que siempre nos mantuvo unidos. En cada cosecha descubrimos algo nuevo, y en cada grano
+                vimos la oportunidad de dejar nuestra huella en la tradición cafetera que nos vio crecer.</p>
         </div>
 
-        <!-- Imágenes centrales de Don Hernán y Don Norbey -->
         <div class="nosotros-imagenes-centrales">
             <img src="IMG/don hernan_.png" alt="Don Hernán">
             <img src="IMG/don norbey.png" alt="Don Norbey">
         </div>
 
         <div class="nosotros-content">
-            <!-- Primer content block: imagen izquierda, texto derecha -->
             <div class="content-block block-overlap-left">
                 <div class="image-container single">
                     <img src="IMG/sobre nosotros 1.png" alt="Trabajando en la finca">
                 </div>
                 <div class="text-container">
-                    <p>Después de muchos años trabajando para otros cultivadores, decidimos crear nuestra propia marca,
+                    <p>Después de muchos años trabajando para otros caficultores, decidimos crear nuestra propia marca,
                         un proyecto que nos permitiera compartir lo que sabemos hacer con amor y sin perder nuestra
-                        esencia.</p>
-                    <p>Así nació Hacherit, nombre inspirado en la Hoja de Hermón—un lugar que se origina en las alturas,
-                        donde la niebla se encuentra con la tierra, el agua nutre y está en trabajar juntos y en ver
-                        florecer lo que sembramos.</p>
+                        esencia </p>
+                    <p>Así nació Hacherit, nombre inspirado en la hija de Hernán (de origen hebreo, significa fortuna),
+                        porque creemos que la verdadera fortuna está en trabajar juntos y en ver florecer lo que
+                        sembramos.</p>
                 </div>
             </div>
 
-            <!-- Segundo content block: texto izquierda, imagen derecha -->
             <div class="content-block block-overlap-right">
                 <div class="text-container">
-                    <p>Hoy nuestra finca ubicada en Santa Elena, Medellín, es el corazón de todo lo que hacemos. Aquí
+                    <p>Hoy nuestra finca, ubicada en Santa Elena, Medellín, es el corazón de todo lo que hacemos. Aquí
                         cultivamos, fermentamos y tostamos nuestro café con la dedicación que aprendimos desde pequeños.
                     </p>
                     <p>Cada taza de Hacherit lleva un poco de nuestra historia, del trabajo de hermanos y del amor por
