--- a/productos.html
+++ b/productos.html
@@ -34,8 +34,8 @@
         <div class="producto-card rojo">
             <div class="producto-info">
                 <h3>Honey Rojo</h3>
-                <p>Un café de matices intensos, donde el dulzor del vino y el aroma del cacao se entrelazan en perfecta
-                    armonía, reflejando la paciencia y la paciencia del proceso.</p>
+                <p>Un café de matices intensos, donde el dulzor del vino y el aroma del cacao se entrelazan en cada
+                    sorbo. Su perfil revela la fuerza del grano y la paciencia del proceso.</p>
                 <a href="honey-rojo-detalle.html" class="product-card-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
@@ -46,8 +46,8 @@
         <div class="producto-card negro">
             <div class="producto-info">
                 <h3>Honey Negro</h3>
-                <p>Oscuro y profundo, conserva una dulzura sutil que balancea la riqueza de sus sentidos. Cada taza
-                    evoca la fuerza entre lo salvaje y lo domado, entre la tierra y la mente.</p>
+                <p>Oscuro y profundo, conserva una dulzura sutil que envuelve los sentidos. Cada taza evoca el
+                    equilibrio entre la sombra y la calidez, entre la tierra y la miel.</p>
                 <a href="honey-negro-detalle.html" class="product-card-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
@@ -58,8 +58,8 @@
         <div class="producto-card verde">
             <div class="producto-info">
                 <h3>Suave Lavado</h3>
-                <p>Limpio, claro y sereno. Un café que habla de las montañas y de las manos que lo cultivan. Conserva la
-                    luz, el equilibrio y la pureza de la esencia.</p>
+                <p>Limpio, claro y sereno. Un café que habla de las montañas y de las manos que lo cultivan. En su
+                    suavidad se encuentra la pureza de lo esencial.</p>
                 <a href="honey-verde-detalle.html" class="product-card-button">Conoce más</a>
             </div>
             <div class="producto-imagen">
@@ -67,8 +67,7 @@
             </div>
         </div>
     </section>
-
-    <!-- Fixed footer structure to match wireframe -->
+    
     <footer>
         <div class="footer-content">
             <div class="footer-left">
