--- a/suave-lavado-detalle.html
+++ b/suave-lavado-detalle.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Honey Verde - Hacherit</title>
+    <title>Suave Lavado - Hacherit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -30,9 +30,9 @@
 
     <section class="detalle-hero detalle-hero-verde">
         <div class="detalle-info">
-            <h1>Honey Verde</h1>
-            <h1>Honey Verde</h1>
-            <h1>Honey Verde</h1>
+            <h1>Suave Lavado</h1>
+            <h1>Suave Lavado</h1>
+            <h1>Suave Lavado</h1>
         </div>
         <div class="detalle-specs">
             <div class="spec-item">
@@ -65,18 +65,18 @@
         </div>
         <div class="descripcion-content">
             <h2>DESCRIPCIÓN</h2>
-            <p>Nacido entre la neblina y los cafetales de Santa Elena, el Honey Verde guarda la dulzura de la tierra en
-                cada grano. Su proceso artesanal conserva la miel natural del café—esa capa dorada que envuelve el
-                grano—logrando tardes lentas, conversación y calidez.</p>
-            <p>Un café para quienes buscan una experiencia más sensorial que rutinaria; un viaje suave y profundo al
-                corazón del origen.</p>
+            <p>Ligero pero lleno de intención, el Suave Lavado es la expresión más limpia del café de montaña. Cada
+                grano pasa por un proceso cuidadoso que resalta su pureza y suavidad, ideal para quienes disfrutan los
+                matices sin exceso.</p>
+
+            <p>Es el reflejo de la calma, del primer sorbo de la mañana y del silencio que antecede al día.</p>
 
             <h4>NOTAS DE SABOR:</h4>
-            <p>Vinoso, uva madura, chocolate.</p>
+            <p>Caramelo, miel y cacao intenso.</p>
 
             <h4>MARIDAJE SUGERIDO:</h4>
-            <p>Ideal con postres suaves como tiramisú, cheesecake o pan de banana. También resalta con quesos maduros y
-                chocolate semiamargo.</p>
+            <p>Acompaña muy bien con pan artesanal, croissants o frutas frescas como fresa o manzana. Excelente opción
+                para métodos filtrados.</p>
         </div>
     </section>
 
@@ -89,19 +89,18 @@
         <div class="proceso-grid">
             <div class="proceso-item">
                 <img src="IMG/proceso cafe 1.png" alt="Recolección">
-                <p>Solo se eligen los granos maduros, de color rojo intenso. Este punto es clave, pues la dulzura
-                    natural del café depende de la madurez exacta del fruto.</p>
+                <p>Los recolectores eligen frutos sanos y uniformes para mantener un perfil de sabor constante.</p>
             </div>
             <div class="proceso-item">
                 <img src="IMG/proceso cafe 2.png" alt="Proceso Lavado">
-                <p>A diferencia del proceso lavado, los granos no se despulpan completamente. Parte del mucílago —la
-                    "miel" natural del café— se mantiene adherida al grano durante el secado, aportando notas dulces y
-                    una textura aterciopelada.</p>
+                <p>Se despulpa de forma tradicional y luego se hace un lavado suave, retirando solo parte del mucílago
+                    sin dejar el grano completamente limpio.
+                </p>
             </div>
             <div class="proceso-item">
                 <img src="IMG/proceso cafe 3.png" alt="Reposo">
-                <p>Luego de alcanzar la humedad ideal, el café se deja reposar para estabilizar sus aromas antes de un
-                    tueste medio que resalta sus matices vinosos y su cuerpo sedoso.</p>
+                <p>El grano se seca con una capa ligera de miel residual, logrando un perfil más limpio que los honey,
+                    pero con buena dulzura y equilibrio.</p>
             </div>
         </div>
     </section>
